--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <body>
     <header>
         <img class="img-fluid" src="Images/Home/brewfxcropsigns31.jpg" alt="home page image" id="bannerheader">
-        <nav class="navbar navbar-expand-sm bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">BreweryFX</a>
+              <a class="navbar-brand" href="contactUs.html">BreweryFX</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -53,14 +53,25 @@
                   <li class="nav-item">
                     <a class="nav-link" href="trays.html"><i class="fa-solid fa-circles-overlap" style="color: #ffffff;"></i>Trays</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mobile-only-link">
                     <a class="nav-link" href="Labels.html"><i class="fa-regular fa-note-sticky" style="color: #ffffff;"></i>Labels</a>
                   </li>
                   <li class="nav-item mobile-only-link">
                     <a class="nav-link" href="https://www.google.com/maps/place/677+Estelle+Dr,+Lancaster,+PA+17601" target="_blank"><i class="fa-solid fa-map" style="color: #ffffff;"></i>Map</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mobile-only-link">
                     <a class="nav-link" href="contactUs.html"><i class="fa-solid fa-address-book" style="color: #ffffff;"></i>Contact Us</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      More
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="Labels.html">Labels</a></li>
+                      <li><a class="dropdown-item" href="https://www.google.com/maps/place/677+Estelle+Dr,+Lancaster,+PA+17601">Map</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="contactUs.html">Contact Us</a></li>
+                    </ul>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
